--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,12 @@
 services:
   - type: web
-    name: pryMongoEsp32
+    name: pryMongoEsp32D
     runtime: python
-    repo: https://github.com/diegoMS553/Esp32Mongo
+    repo: https://github.com/Dani-RCD/pryMongoEsp32.git
     plan: free
     envVars:
       - key: MONGO_URI
-        value: mongodb+srv://diegosant:diegosant123@cluster0.7zhck.mongodb.net/BasePryEsp32?retryWrites=true&w=majority
+        value: mongodb+srv://dani:<db_password>@cluster0.kgcikfo.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
     region: oregon
     buildCommand: pip install -r requirements.txt
     startCommand: python app.py
