--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,12 @@
 services:
   - type: web
-    name: pryMongoEsp32D
+    name: pryMongoEsp32
     runtime: python
     repo: https://github.com/Dani-RCD/pryMongoEsp32.git
     plan: free
     envVars:
       - key: MONGO_URI
-        value: mongodb+srv://dani:<db_password>@cluster0.kgcikfo.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+        value: mongodb+srv://dani:holamundo@cluster0.kgcikfo.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
     region: oregon
     buildCommand: pip install -r requirements.txt
     startCommand: python app.py
