--- a/render.yaml
+++ b/render.yaml
@@ -2,11 +2,11 @@ services:
   - type: web
     name: pryMongoEsp32
     runtime: python
-    repo: https://github.com/Dani-RCD/pryMongoEsp32.git
+    repo: https://github.com/Dani-RCD/MongoEsp32D.git
     plan: free
     envVars:
       - key: MONGO_URI
-        value: mongodb+srv://dani:holamundo @cluster0.kgcikfo.mongodb.net/pryMongoEsp32?retryWrites=true&w=majority&appName=Cluster0
+        value: mongodb+srv://dani:DxkMc_FYz#s64@m@cluster0.kgcikfo.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
     region: oregon
     buildCommand: pip install -r requirements.txt
     startCommand: python app.py
